--- a/checkout.html
+++ b/checkout.html
@@ -25,6 +25,6 @@ mixpanel.init("df14d6ddb2e221e268a5b2f1ce34606c");</script><!-- end Mixpanel -->
 </head>
 <body>
   <h1>結帳頁面</h1>
-  <a href="success.html">結帳</a>
+  <a href="https://gonsakon.github.io/growth-pages/success.html">結帳</a>
 </body>
 </html>
