--- a/product.html
+++ b/product.html
@@ -36,6 +36,6 @@ mixpanel.init("df14d6ddb2e221e268a5b2f1ce34606c");</script><!-- end Mixpanel -->
   <h1>產品內頁</h1>
   <h2>紅色T恤</h2>
   <a href="#" class="js-addCart">加入購物車</a>
-  <a href="checkout.html">進入結帳頁面</a>
+  <a href="https://gonsakon.github.io/growth-pages/checkout.html">進入結帳頁面</a>
 </body>
 </html>
