--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ mixpanel.init("df14d6ddb2e221e268a5b2f1ce34606c");</script><!-- end Mixpanel -->
 </head>
 <body>
   <h1>首頁</h1>
-  <a href="product.html">進入產品內頁</a>
+  <a href="https://gonsakon.github.io/growth-pages/product.html">進入產品內頁</a>
   
 </body>
 </html>
