--- a/success.html
+++ b/success.html
@@ -25,6 +25,6 @@ mixpanel.init("df14d6ddb2e221e268a5b2f1ce34606c");</script><!-- end Mixpanel -->
 </head>
 <body>
   <h1>購買成功</h1>
-  <a href="index.html">回首頁</a>
+  <a href="https://gonsakon.github.io/growth-pages/index.html">回首頁</a>
 </body>
 </html>
